added a loop to list news available

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,6 +7,7 @@
     <title>{{ temp_title }}</title>
 </head>
 <body>
-    <h1>{{ temp_para }}</h1>
+    {% block content %}
+    {% endblock %}
 </body>
 </html>
